--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Tomas Sargentoni Freelancer</h1>
+        <h1>Tomas Freelancer</h1>
     </header>
 
     <nav>
