--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseñador Freelancer </title>   
+    <title>Diseñador Freelancer </title> 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1 class="titulo"> Tomas Sargentoni <span>Freelancer</span></h1>
-        <h2>Inicio</h2>
     </header>
 
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="nosotros.html">Sobre mi</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
-
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Sobre mi</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
     
     <section>
         <h2 class="titulo"> Diseño y Desarrollo web <span>Freelancer</span></h2>
