Segundo proyecto terminado! Tienda de Camisetas

--- a/FrontEndStore_inicio/producto.html
+++ b/FrontEndStore_inicio/producto.html
@@ -24,7 +24,27 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Producto</h1>
+        <h1>React JS</h1>
+
+        <div class="camisa">
+            <img class="camisa__imagen" src="./img/3.jpg" alt="imagen del producto">
+
+            <div class="camisa__contenido">
+                <p>Aliquam ultrices leo quis eros pretium maximus. Interdum et malesuada fames ac ante ipsum primis in faucibus. In in risus rutrum, porttitor felis ut, porta magna. 
+                    Quisque ac neque nec lectus varius ullamcorper at ullamcorper ipsum. Nulla mattis libero sit amet faucibus ultricies.</p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>-- Seleccionar Talla --</option>
+                        <option>Chica</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar al Carrito">
+                </form>
+            </div>
+        </div>
     </main>
     
 
