--- a/FrontEndStore_inicio/nosotros.html
+++ b/FrontEndStore_inicio/nosotros.html
@@ -70,7 +70,7 @@
     
 
     <footer class="footer">
-        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2023.</p>
+        <p class="footer__texto">Tomas Sargentoni - Front End Store - Todos los derechos Reservados 2023.</p>
     </footer>
 
 </body>
