avanzado un poco, agregado un border bottom solid

--- a/blogdecafe_inicio/index.html
+++ b/blogdecafe_inicio/index.html
@@ -44,7 +44,32 @@
 
                 <div class="entrada__contenido">
                     <h4 class="no-margin">Tipos de grano de cafe</h4>
-                    <p> ACA va el Lorem</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor pretium justo non molestie. Proin ligula orci, placerat mollis urna id, commodo fermentum magna.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor pretium justo non molestie. Proin ligula orci, placerat mollis urna id, commodo fermentum magna.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor pretium justo non molestie. Proin ligula orci, placerat mollis urna id, commodo fermentum magna.</p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
                 </div>
             </article>
 
