--- a/blogdecafe_inicio/index.html
+++ b/blogdecafe_inicio/index.html
@@ -15,7 +15,7 @@
 
     <header class="header">
 
-        <div class="contenedor"></div>
+        <div class="contenedor">
             <div class="barra">
                 <a class="logo" href="index.html">
                     <h1 class="logo__nombre no-margin centrar-texto">Blog <span class="logo__bold">DeCafe</span></h1>
@@ -27,6 +27,8 @@
                     <a href="contacto.html" class="navegacion__enlace">Contacto</a>
                 </nav>
             </div> <!--.barra-->
+        </div>
+
         <div class="header__texto">
             <h2 class="no-margin">Blog de cafe con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
@@ -76,8 +78,40 @@
         </main>
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
+
+            <ul class="cursos no-padding">
+                <li class="widget-curso">
+                    <h4 class="no-margin">Tecnicas de Extraccion de Café</h4>
+                    <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
+                    <p class="widget-curso__label">Cupo: <span class="widget-curso__info">20</span></p>
+                    <a href="cursos.html" class="boton boton--secundario">Mas Informacion</a>
+                </li>
+
+                <li class="widget-curso">
+                    <h4 class="no-margin">4 Recetas de Café para principiantes</h4>
+                    <p class="widget-curso__label">Precio: <span class="widget-curso__info">Gratis</span></p>
+                    <p class="widget-curso__label">Cupo: <span class="widget-curso__info">20</span></p>
+                    <a href="cursos.html" class="boton boton--secundario">Mas Informacion</a>
+                </li> 
+            </ul>
         </aside>
     </div>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog <span class="logo__bold">DeCafe</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                </nav>
+            </div> <!--.barra-->
+        </div>
+    </footer>
     
 </body>
 </html>
