--- a/blogdecafe_inicio/index.html
+++ b/blogdecafe_inicio/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafe</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    
+
+    <!-- Prefetch-->
+    <link rel="prefetch" href="nosotros.html" as="document">
+
+
+    <!-- Preload-->
+
+    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:ital,wght@0,400;1,700&display=swap" crossorigin="crossorigin" as="font">
+
+    <link rel="reload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preload" href="img/blog1.jpg" as="image">
 </head>
 <body>
 
@@ -41,7 +55,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog1.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -53,7 +67,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog2.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -65,7 +79,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog3.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
