--- a/Paginas/bienesraices_inicio/index.html
+++ b/Paginas/bienesraices_inicio/index.html
@@ -8,6 +8,95 @@
 </head>
 <body>
     
+    <header class="header inicio">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
+                
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+
+            </div> <!--.Barra-->
+
+            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+        </div>
+    </header>
+
+    <main class="contenedor">
+        <h1>Mas Sobre Nosotros</h1>
+
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="build/img/icono1.svg" alt="Icono Seguridad" loading="lazy">
+                <h3>Seguridad</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue justo ut lorem sagittis finibus vel convallis velit. Donec nisi quam, sodales vel pellentesque sit amet, feugiat quis magna. Quisque ipsum risus, placerat.</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono2.svg" alt="Icono Precio" loading="lazy">
+                <h3>Precio</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue justo ut lorem sagittis finibus vel convallis velit. Donec nisi quam, sodales vel pellentesque sit amet, feugiat quis magna. Quisque ipsum risus, placerat.</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/icono3.svg" alt="Icono Tiempo" loading="lazy">
+                <h3>Tiempo</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue justo ut lorem sagittis finibus vel convallis velit. Donec nisi quam, sodales vel pellentesque sit amet, feugiat quis magna. Quisque ipsum risus, placerat.</p>
+            </div>
+        </div>
+    </main>
+
+    <section class="seccion contenedor">
+        <h2>Casas y Depas en Venta</h2>
+
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el Lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer seccion">
+        <div class="contenedor contenedor-footer">
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+        </div>
+
+        <p class="copyright">Todos los derechos Reservados 2024 &copy;</p>
+    </footer>
 
     <script src="build/js/bundle.min.js"></script>
 </body>
