--- a/Paginas/bienesraices_inicio/index.html
+++ b/Paginas/bienesraices_inicio/index.html
@@ -182,7 +182,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
-                        <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
 
                         <p>
                             Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
@@ -202,7 +202,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Guia para la decoracion de tu hogar</h4>
-                        <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                        <p class="informacion-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
 
                         <p>
                             Maximiza tu espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
