--- a/Paginas/bienesraices_inicio/anuncios.html
+++ b/Paginas/bienesraices_inicio/anuncios.html
@@ -15,12 +15,19 @@
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsive">
+                </div>
+                
+                <div class="derecha">
+                    <img src="build/img/dark-mode.svg" class="dark-mode-boton">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
 
             </div> <!--.Barra-->
 
@@ -46,15 +53,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -78,15 +85,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -110,15 +117,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -143,15 +150,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -176,15 +183,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -209,15 +216,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
