--- a/Paginas/bienesraices_inicio/index.html
+++ b/Paginas/bienesraices_inicio/index.html
@@ -14,13 +14,21 @@
                 <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
+
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu responsive">
+                </div>
                 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+                <div class="derecha">
+                    <img src="build/img/dark-mode.svg" class="dark-mode-boton">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
+                </div>
+
 
             </div> <!--.Barra-->
 
@@ -68,15 +76,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -100,15 +108,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
@@ -132,15 +140,15 @@
 
                     <ul class="iconos-caracteristicas">
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono habitaciones">
                             <p>4</p>
                         </li>
                     </ul>
